--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
 
         </div>
     <div class="col-xl-8 mx-auto">
-    <h1> Transforming Travel Everywhere,Everyday</h1>
-
+    <h1>WE CREATE<BR>THE NEXT</h1>
+    
+    <!-- <div class=" ">
+      <img src="images/car.gif" class="car" alt="">
+    </div> -->
 
     </div>
     </section>    
